# martini_vis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  vis_top_writer.py
example/: generate_expected_files.sh  martini.itp
example/expected_output/: chain_A.ssd  en.top  molecule_0.itp  molecule_0_cgsecstruct.txt  molecule_0_en.itp  molecule_0_surplus_en.txt  molecule_0_vis.itp  newbox.gro  vis.top
martini_vis/: __init__.py
martini_vis/data/: cg_bonds-v6.tcl  cg_secondary_structure.tcl  eigen.py  vis.vmd
martini_vis/data/old_cg_bonds/: cg_bonds-v5.tcl
martini_vis/src/: __init__.py  elastic_writer.py  go_writer.py  index_writer.py  molecule_editing.py  system_reading.py  topology.py
src/: elastic_writer.py  go_writer.py  system_reading.py  topology.py
