[wheel]
universal = 1

[metadata]
name = martini_vis
author = Christopher Brasnett
author_email = c.s.brasnett@rug.nl
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
license = Apache 2.0
keywords = molecular dynamics martini

[options]
packages = find:
setup-requires =
    setuptools
    pbr
install-requires =  # ?? requires-dist?
    pbr
    vermouth >= 0.9.6
    networkx >= 3.3.0
    numpy >= 1.26.4
zip-safe = False
